End of part 11 - Account Settings Navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Freehand</string>
+    <string name="app_name">InstagtamClone</string>
+
+    <string name="sign_out">Sign Out</string>
+    <string name="edit_profile">Edit Profile</string>
+
 </resources>
