End of part 21 - Testing Firebase Authentication (had some issues --> solution: google play services needed to be up to date to work with the compiled libraries)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="sign_out_fragment">Sign Out</string>
     <string name="edit_profile_fragment">Edit Profile</string>
 
+
+    <!-- Firebase messages -->
+    <string name="auth_failed">Authentication failed.</string>
+    <string name="auth_success">Authentication success.</string>
+
+
 </resources>
