--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--Fragment names-->
     <string name="sign_out_fragment">Sign Out</string>
     <string name="edit_profile_fragment">Edit Profile</string>
+    <string name="profile_fragment">Profile</string>
 
 
     <!-- Firebase messages -->
