--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,14 @@
     <string name="dnname_users">users</string>
     <string name="dnname_user_account_settings">user_account_settings</string>
 
+    <!--Intent Extras-->
+    <string name="calling_activity">calling_activity</string>
+
+    <!--Activity Names-->
+    <string name="profile_activity">Profile Activity</string>
+
+
+
 
 
 </resources>
