--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <!--Firebase database fields-->
     <string name="dnname_users">users</string>
     <string name="dnname_user_account_settings">user_account_settings</string>
+    <string name="field_username">username</string>
 
     <!--Intent Extras-->
     <string name="calling_activity">calling_activity</string>
