End of part 37 - Changing Firebase Authenticated Email (part 1/3)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="profile_fragment">Profile</string>
 
 
+    <!--dialog names-->
+    <string name="confirm_password_dialog">ConfirmPasswordDialog</string>
+
     <!-- Firebase messages -->
     <string name="auth_failed">Authentication failed.</string>
     <string name="auth_success">Authentication success.</string>
