End of part 42 - ShareActivity Layout and Tabs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,11 @@
     <!--Activity Names-->
     <string name="profile_activity">Profile Activity</string>
 
+    <!--strings-->
+    <string name="gallery">GALLERY</string>
+    <string name="photo">PHOTO</string>
+
+
 
 
 
