End of part 43 - Setup Gallery and Photo Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <!--strings-->
     <string name="gallery">GALLERY</string>
     <string name="photo">PHOTO</string>
+    <string name="string_open_camera">OPEN CAMERA</string>
 
 
 
