End of part 48 - Selected Image to Share

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
 
     <!--Intent Extras-->
     <string name="calling_activity">calling_activity</string>
+    <string name="selected_image">selected_image</string>
 
     <!--Activity Names-->
     <string name="profile_activity">Profile Activity</string>
