--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,11 +36,7 @@
     <string name="photo">PHOTO</string>
     <string name="string_open_camera">OPEN CAMERA</string>
     <string name="string_next">Next</string>
-
-
-
-
-
+    <string name="string_share">Share</string>
 
 
 </resources>
