--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,16 @@
     <!--Firebase database fields-->
     <string name="dnname_users">users</string>
     <string name="dnname_user_account_settings">user_account_settings</string>
+    <string name="dnname_photos">photos</string>
+    <string name="dnname_user_photos">user_photos</string>
+
     <string name="field_username">username</string>
     <string name="field_email">email</string>
     <string name="field_display_name">display_name</string>
     <string name="field_website">website</string>
     <string name="field_description">description</string>
     <string name="field_phone_number">phone_number</string>
+
 
     <!--Intent Extras-->
     <string name="calling_activity">calling_activity</string>
