--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,10 +15,10 @@
     <string name="auth_success">Authentication success.</string>
 
     <!--Firebase database fields-->
-    <string name="dnname_users">users</string>
-    <string name="dnname_user_account_settings">user_account_settings</string>
-    <string name="dnname_photos">photos</string>
-    <string name="dnname_user_photos">user_photos</string>
+    <string name="dbname_users">users</string>
+    <string name="dbname_user_account_settings">user_account_settings</string>
+    <string name="dbname_photos">photos</string>
+    <string name="dbname_user_photos">user_photos</string>
 
     <string name="field_username">username</string>
     <string name="field_email">email</string>
