End of part 56 - Changing Profile Photo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <!--Intent Extras-->
     <string name="calling_activity">calling_activity</string>
     <string name="selected_image">selected_image</string>
+    <string name="return_to_fragment">return_to_fragment</string>
 
     <!--Activity Names-->
     <string name="profile_activity">Profile Activity</string>
