--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,9 @@
     <!--Intent Extras-->
     <string name="calling_activity">calling_activity</string>
     <string name="selected_image">selected_image</string>
+    <string name="selected_bitmap">selected_bitmap</string>
     <string name="return_to_fragment">return_to_fragment</string>
+
 
     <!--Activity Names-->
     <string name="profile_activity">Profile Activity</string>
